Edited wiki page through web user interface.

--- a/wiki/OtherProjects.wiki
+++ b/wiki/OtherProjects.wiki
@@ -8,3 +8,5 @@
    * DXF to G-code
   * Linux/GNU cad-cam http://gnu-cad-cam.sourceforge.net/
    * not much else than a design document...
+  * CAM Algorithms http://sourceforge.net/projects/verot/
+   * appears to be dead...
