Edited wiki page through web user interface.

--- a/wiki/OtherProjects.wiki
+++ b/wiki/OtherProjects.wiki
@@ -10,3 +10,4 @@
    * not much else than a design document...
   * CAM Algorithms http://sourceforge.net/projects/verot/
    * appears to be dead...
+  * FreeCAD http://juergen-riegel.net/FreeCAD/Docu/index.php?title=Main_Page
