Edited wiki page through web user interface.

--- a/wiki/PaperList.wiki
+++ b/wiki/PaperList.wiki
@@ -9,7 +9,10 @@ Papers should be organized roughly by category below. It doesn't make sense to l
 When only the DOI of a paper is give you can reach it through http://dx.doi.org
 
 See also the BookList
-
+= Reviews =
+ * Dragomatz and Mann, "A Classified Bibliography of Literture on NC Tool Path Generation", CAD 29(3), 1997
+  * http://www.cgl.uwaterloo.ca/~smann/Papers/survey2.pdf
+  * A review of tool-path algorithms with around 200 references to pre-1997 work 
 = Drop-Cutter =
  * Yau, Chuang, Lee (2004) "Numerical control machining of triangulated sculptured surfaces in a stereo lithography format with a generalized cutter", International Journal of Production Research 42:13 2573-2598
   * link [http://dx.doi.org/10.1080/00207540410001671651]
@@ -33,8 +36,26 @@ See also the BookList
  * Maeng et al. (2004) "A fast NC simulation method for circularly moving tools in the Z-map environment", IEEE Proceedings of the Geometric Modeling and Processing 2004 (GMP’04)
   * link ?
   * summary: z-map update algorithm for circular/arc moves
-= Curve Offset =
- * 
+ * Lee et al. 2002 : “Development of simulation system for machining process using enhanced Z-map model”
+  * doi:10.1016/S0924-0136(02)00761-6
+ * Jerard et al. 1990 (doi:?): “The use of surface points sets for generation, simulation, verification and automatic correction of NC machining programs”
+ * Jerard et al. 1989 (doi:10.1007/BF01999101): “Approximate methods for simulation and verification of numerically controlled machining programs”
+ * Drysdale et al. 1989 (doi:10.1007/BF01553878): “Discrete Simulation of NC Machining”
+ * Chung et al. 1998 (doi:10.1016/S0010-4485(97)00033-X): “Modeling the surface swept by a generalized cutter for NC verification”
+
+= Curve Offset and Pocketing =
+ * Held, "VRONI: An engineering approach to the reliable and efficient computation of Voronoi diagrams of points and line segments" Computation Geometry 18 (2001)
+  * http://dx.doi.org/10.1016/S0925-7721(01)00003-7
+ * Kim, Lee, Yang "A new offset algorithm for closed 2D lines with Islands" Int J Adv Manuf Technol (2006) (DOI:10.1007/s00170-005-0013-1)
+ * Park and Choi "Uncut free pocketing tool-paths generation using pair-wise offset algorithm" CAD 33 (2001) 
+  * http://dx.doi.org/10.1016/S0010-4485(00)00109-3
+ * Liu et al "An offset algorithm for polyline curves" Computers in Industry (2007)
+  * http://dx.doi.org/10.1016/j.compind.2006.06.002
+ * Hansen and Arbab "An algorithm for generating NC tool paths for arbitrary shaped pockets with islands" ACM transactions on graphics (1992)
+  * link ?
+  * a classic paper which many others reference
+ * Lai, Faddis, Sorem, "Incremental algorithms for ®nding the offset distance and minimum passage width in a pocket machining toolpath using the Voronoi technique", J Materials processing technology 100 (2000) 
+  * http://dx.doi.org/10.1016/S0924-0136(99)00425-2
 = Adaptive Machining =
  * Flutter and Todd (2001) "A machining strategy for toolmaking", Computer Aided Design
   * link http://dx.doi.org/10.1016/S0010-4485(00)00136-6
